--- a/resources/css/expedia-oss.css
+++ b/resources/css/expedia-oss.css
@@ -9,7 +9,10 @@ body {
     border-top: solid 4px rgb(238, 194, 24);
     padding-top: 80px;
     padding-bottom: 40px;
-    background-color: rgb(0, 53, 95);
+    background-image: url(../images/planes-bg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .jumbotron h1 {
